tests/bonsai/error/optional_bool.bonsai
func use_option(i : option[bool]) -> void {}
