tests/bonsai/error/optional_bool.expect
---CODE---
-1
---STDERR---
[internal] Error: src/Parser/Parser.cpp:56
tests/bonsai/error/optional_bool.bonsai:1:28: [parse error] Bonsai does not support option[bool] because the semantics are easily misconstrued.

func use_option(i : option[bool]) -> void {}
                           ^^^^
